# RepoCrunch

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: cache.rs  dependency_graph.rs  explain.rs  flow.rs  index.rs  language.rs  main.rs  packer.rs  query.rs  scanner.rs  stats.rs  token.rs
